--- a/main.css
+++ b/main.css
@@ -4,9 +4,21 @@ body{
 }
 #prompt{
     color:aliceblue;
+    margin:1% ;
     
 }
 button{
     margin:1% ;
     background-color:aqua ;
 }
+#e_command{
+    text-align:left;
+    background-color: black;
+    border-color: black;
+    color:aliceblue;
+    width: 100% ;
+    height: 100% ;
+    
+
+}
+
